// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayerDocked [snapshot] should render the "Default" component correctly 1`] = `
<div>
  <img
    alt="The track cover of ANSI.SYS • MASTER BOOT RECORD"
    class="rounded w-16 h-16"
    src="https://picsum.photos/50"
  />
  <span>
    ANSI.SYS
  </span>
  <span
    class="px-2"
  >
    •
  </span>
  
  <span>
    MASTER BOOT RECORD
  </span>
  
  <span
    class="flex text-neutral text-black"
  >
    <svg
      class=""
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12.1,18.55L12,18.65L11.89,18.55C7.14,14.24 4,11.39 4,8.5C4,6.5 5.5,5 7.5,5C9.04,5 10.54,6 11.07,7.36H12.93C13.46,6 14.96,5 16.5,5C18.5,5 20,6.5 20,8.5C20,11.39 16.86,14.24 12.1,18.55M16.5,3C14.76,3 13.09,3.81 12,5.08C10.91,3.81 9.24,3 7.5,3C4.42,3 2,5.41 2,8.5C2,12.27 5.4,15.36 10.55,20.03L12,21.35L13.45,20.03C18.6,15.36 22,12.27 22,8.5C22,5.41 19.58,3 16.5,3Z"
        style="fill: currentColor;"
      />
    </svg>
    <!--v-if-->
  </span>
  <svg
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M8.5,8.64L13.77,12L8.5,15.36V8.64M6.5,5V19L17.5,12"
      style="fill: currentColor;"
    />
  </svg>
  <!--v-if-->
  <div
    class="h-1 bg-primary-light"
  >
    <div
      class="h-full rounded-full bg-primary"
      style="width: 50%;"
    />
  </div>
</div>
`;

exports[`PlayerDocked [snapshot] should render the "ListeningOnDesktop" component correctly 1`] = `
<div>
  <img
    alt="The track cover of ANSI.SYS • MASTER BOOT RECORD"
    class="rounded w-16 h-16"
    src="https://picsum.photos/50"
  />
  <span>
    ANSI.SYS
  </span>
  <span
    class="px-2"
  >
    •
  </span>
  
  <span>
    MASTER BOOT RECORD
  </span>
  
  <span
    class="flex text-neutral text-black"
  >
    <svg
      class=""
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12.1,18.55L12,18.65L11.89,18.55C7.14,14.24 4,11.39 4,8.5C4,6.5 5.5,5 7.5,5C9.04,5 10.54,6 11.07,7.36H12.93C13.46,6 14.96,5 16.5,5C18.5,5 20,6.5 20,8.5C20,11.39 16.86,14.24 12.1,18.55M16.5,3C14.76,3 13.09,3.81 12,5.08C10.91,3.81 9.24,3 7.5,3C4.42,3 2,5.41 2,8.5C2,12.27 5.4,15.36 10.55,20.03L12,21.35L13.45,20.03C18.6,15.36 22,12.27 22,8.5C22,5.41 19.58,3 16.5,3Z"
        style="fill: currentColor;"
      />
    </svg>
    <!--v-if-->
  </span>
  <svg
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M8.5,8.64L13.77,12L8.5,15.36V8.64M6.5,5V19L17.5,12"
      style="fill: currentColor;"
    />
  </svg>
  <div />
  <div
    class="h-1 bg-primary-light"
  >
    <div
      class="h-full rounded-full bg-primary"
      style="width: 50%;"
    />
  </div>
</div>
`;
